--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,7 @@
 name = "prkserver"
 version = "0.1.1"
 edition = "2021"
-keywords = [
-    "SQL",
-    "database",
-    "orm",
-    "web-programming",
-    "mysql",
-    "axum",
-    "server",
-    "CLI",
-    "bin",
-]
+keywords = ["database", "orm", "mysql", "axum", "server"]
 categories = ["database", "web", "web-programming::http-server"]
 license = "MIT"
 description = "`prkserver` is a CLI tool that helps create a backend server in Rust using Axum and SQLx. It configures everything based on a provided `config.toml` file."
