--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "prkserver"
 version = "0.2.0"
 edition = "2021"
 keywords = ["database", "orm", "mysql", "axum", "server"]
-categories = ["database", "web", "web-programming::http-server"]
+categories = ["database", "web-programming::http-server"]
 license = "MIT"
 description = "`prkserver` is a CLI tool that helps create a backend server in Rust using Axum and SQLx. It configures everything based on a provided `config.toml` file."
 repository = "https://github.com/prk-Jr/prkserver.git"
